Fix Project form's white-spacing

--- a/frontend/src/Project/Project.scss
+++ b/frontend/src/Project/Project.scss
@@ -387,6 +387,16 @@
       }
     }
 
+    .md-block {
+      &.extra-margin {
+        margin-bottom: 40px;
+      }
+
+      &.extra-margin-double {
+        margin-bottom: 80px;
+      }
+    }
+
     .input-group {
       position: relative;
       box-sizing: border-box;
